[package]
name = "cs-tb-fix"
version = "0.1.0"
authors = ["Andrew Balmos <andrew@balmos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
form_urlencoded = "1.0.1"
hyper = { version = "0.14.9", features = [ "full" ] }
serde = { version = "1.0.126", features = [ "derive" ] }
serde_json = "1.0.64"
tokio = { version = "1.7.0", features = [ "full" ] }
url = "2.2.2"
